bugfix: correct the map generation script update: add a central marker todo: still some layout issues with the new marker (as not inline) update: unify copyright message

--- a/trunk/public_html/templates/basic/css/basic.css
+++ b/trunk/public_html/templates/basic/css/basic.css
@@ -382,7 +382,7 @@ span.formerror
 div.copyright
 {
 	font-size:0.7em; 
-	color: silver;
+	color: gray;
 	text-align:center;
 	font-style:italic;
 }
